Fix coverage reporting
Signed-off-by: Bernát Gábor <gaborjbernat@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ extras =
     test
 commands =
     coverage erase
-    coverage run -m pytest {posargs:--junitxml {toxworkdir}/junit.{envname}.xml tests --int}
+    coverage run -m pytest {posargs:--junitxml {toxworkdir}/junit.{envname}.xml tests/unit/config --int}
     coverage combine
     coverage report --skip-covered --show-missing
     coverage xml -o {toxworkdir}/coverage.{envname}.xml
