--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,9 @@ description = [run locally after tests]: combine coverage data and create report
 skip_install = true
 deps =
     covdefaults>=2.2.2
-    coverage[toml]>=7.0.1
+    ;coverage[toml]>=7.0.1
+    tomli
+    git+https://github.com/nedbat/coveragepy@nedbat/fix-virtualenv#egg=coverage==0.0
     diff_cover>=7.3
 extras =
 parallel_show_output = true
