--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -93,48 +93,6 @@ jobs:
           PYTEST_ADDOPTS: "-vv --durations=20"
           CI_RUN: "yes"
           DIFF_AGAINST: HEAD
-      - name: Rename coverage report file
-        run: |
-          import os; import sys
-          os.rename(f".tox/.coverage.{os.environ['TOXENV']}", f".tox/.coverage.{os.environ['TOXENV']}-{sys.platform}")
-        shell: python
-      - name: Upload coverage data
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-data
-          path: ".tox/.coverage.*"
-
-  coverage:
-    name: Combine coverage
-    runs-on: ubuntu-22.04
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-      - name: Install tox
-        run: python -m pip install tox
-      - name: Setup coverage tool
-        run: tox -e coverage --notest
-      - name: Install package builder
-        run: python -m pip install build
-      - name: Build package
-        run: pyproject-build --wheel .
-      - name: Download coverage data
-        uses: actions/download-artifact@v3
-        with:
-          name: coverage-data
-          path: .tox
-      - name: Combine and report coverage
-        run: tox -e coverage
-      - name: Upload HTML report
-        uses: actions/upload-artifact@v3
-        with:
-          name: html-report
-          path: .tox/htmlcov
 
   check:
     name: ${{ matrix.tox_env }} - ${{ matrix.os }}
@@ -171,7 +129,7 @@ jobs:
           UPGRADE_ADVISORY: "yes"
 
   publish:
-    needs: [check, coverage]
+    needs: [check]
     runs-on: ubuntu-22.04
     steps:
       - name: Setup python to build package
