--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,36 +17,36 @@ repos:
       - id: add-trailing-comma
         args: [--py36-plus]
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.2.1
+    rev: v3.3.1
     hooks:
       - id: pyupgrade
         args: ["--py37-plus"]
         exclude: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.38.4
+    rev: v3.3.1
     hooks:
       - id: pyupgrade
         files: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
   - repo: https://github.com/PyCQA/isort
-    rev: 5.11.4
+    rev: 5.12.0
     hooks:
       - id: isort
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 23.1.0
     hooks:
       - id: black
         args: [--safe]
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.1
+    rev: 1.13.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==22.12]
+        additional_dependencies: [black==23.1]
   - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.9.0
+    rev: v1.10.0
     hooks:
       - id: rst-backticks
   - repo: https://github.com/tox-dev/tox-ini-fmt
-    rev: "0.5.2"
+    rev: "0.6.1"
     hooks:
       - id: tox-ini-fmt
         args: ["-p", "fix"]
@@ -55,11 +55,11 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies:
-          - flake8-bugbear==22.12.6
+          - flake8-bugbear==23.1.20
           - flake8-comprehensions==3.10.1
           - flake8-pytest-style==1.6
           - flake8-spellcheck==0.28
-          - flake8-unused-arguments==0.0.12
+          - flake8-unused-arguments==0.0.13
           - flake8-noqa==1.3
           - pep8-naming==0.13.3
           - flake8-pyproject==1.2.2
@@ -68,11 +68,11 @@ repos:
     hooks:
       - id: prettier
         additional_dependencies:
-          - prettier@3.0.0-alpha.4
+          - prettier@2.7.1
           - "@prettier/plugin-xml@2.2"
         args: ["--print-width=120", "--prose-wrap=always"]
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.32.2
+    rev: v0.33.0
     hooks:
       - id: markdownlint
   - repo: meta
