Set PYTHONWARNDEFAULTENCODING when running the tests
Signed-off-by: Filipe Laíns <lains@riseup.net>

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ set_env =
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
     COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
     COVERAGE_PROCESS_START = {toxinidir}/pyproject.toml
+    PYTHONWARNDEFAULTENCODING = 1
 wheel_build_env = .pkg
 
 [testenv:fix]
