--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,6 @@
 [tox]
+requires =
+    tox>=4
 envlist =
     fix
     py311
@@ -12,12 +14,22 @@ envlist =
     docs
 isolated_build = true
 skip_missing_interpreters = true
-requires = tox>=4
 
 [testenv]
 description = run tests with {basepython}
+package = wheel
+wheel_build_env = .pkg
 extras =
     test
+pass_env =
+    CI_RUN
+    PYTEST_*
+    TERM
+set_env =
+    COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
+    COVERAGE_PROCESS_START = {toxinidir}/pyproject.toml
+    PYTHONWARNDEFAULTENCODING = 1
+    _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
 commands =
     coverage erase
     coverage run -m pytest {posargs:--junitxml {toxworkdir}/junit.{envname}.xml tests --int}
@@ -25,23 +37,12 @@ commands =
     coverage report --skip-covered --show-missing
     coverage xml -o {toxworkdir}/coverage.{envname}.xml
     coverage html -d {envtmpdir}/htmlcov --show-contexts  --title virtualenv-{envname}-coverage
-package = wheel
-pass_env =
-    CI_RUN
-    PYTEST_*
-    TERM
-set_env =
-    _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
-    COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
-    COVERAGE_PROCESS_START = {toxinidir}/pyproject.toml
-    PYTHONWARNDEFAULTENCODING = 1
-wheel_build_env = .pkg
 
 [testenv:fix]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 skip_install = true
 deps =
-    pre-commit>=3.0.4
+    pre-commit>=3.2.1
 commands =
     pre-commit run --all-files --show-diff-on-failure
 
@@ -68,32 +69,32 @@ commands =
 description = upgrade pip/wheels/setuptools to latest
 skip_install = true
 deps =
-    black>=23.1
-commands =
-    python upgrade_wheels.py
-change_dir = {toxinidir}/tasks
+    black>=23.3
 pass_env =
     UPGRADE_ADVISORY
+change_dir = {toxinidir}/tasks
+commands =
+    python upgrade_wheels.py
 
 [testenv:release]
 description = do a release, required posarg of the version number
 deps =
-    gitpython>=3.1.30
+    gitpython>=3.1.31
     packaging>=23
     towncrier>=22.12
+change_dir = {toxinidir}/tasks
 commands =
     python release.py --version {posargs}
-change_dir = {toxinidir}/tasks
 
 [testenv:dev]
 description = generate a DEV environment
+package = editable
 extras =
     docs
     test
 commands =
     python -m pip list --format=columns
     python -c 'import sys; print(sys.executable)'
-package = editable
 
 [testenv:zipapp]
 description = generate a zipapp
