Don't install setuptools and wheel on Python 3.12+
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,6 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         py:
+          - "3.12.0-alpha.7"
           - "3.11"
           - "3.10"
           - "3.9"
