--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         py:
-          - "3.12.0-alpha.7"
+          - "3.12.0-beta.1"
           - "3.11"
           - "3.10"
           - "3.9"
