--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,7 +144,7 @@ ignore = [
     "ANN",  # no type checking added yet
     "D10",  # no docstrings
     "D40",  # no imperative mode for docstrings
-    "PTH",
+    "PTH",  # no pathlib, <=39 has problems on Windows with absolute/resolve, can revisit once we no longer need 39
     "INP001",  # ignore implicit namespace packages
     "D203",  # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
     "D212",  # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
