--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ pip = "virtualenv.seed.embed.pip_invoke:PipInvoke"
 
 [tool.hatch]
 build.hooks.vcs.version-file = "src/virtualenv/version.py"
-build.targets.sdist.include = ["/src", "/tests", "/tox.ini"]
+build.targets.sdist.include = ["/src", "/tests", "/tasks", "/tox.ini"]
 version.source = "vcs"
 
 [tool.black]
